package vn.qlkt.award;

import java.util.Date;

public class DanhHieuHangNam {
    private String id;
    private String quan_nhan_id;
    private Integer nam;
    private DanhHieuCaNhan danh_hieu;
    private String cap_bac;
    private String chuc_vu;
    private String ghi_chu;
    private String so_quyet_dinh;
    private Boolean nhan_bkbqp;
    private String so_quyet_dinh_bkbqp;
    private String ghi_chu_bkbqp;
    private Boolean nhan_cstdtq;
    private String so_quyet_dinh_cstdtq;
    private String ghi_chu_cstdtq;
    private Boolean nhan_bkttcp;
    private String so_quyet_dinh_bkttcp;
    private String ghi_chu_bkttcp;
    private Date createdAt;
    private Date updatedAt;
}
