package vn.qlkt.profile;

import java.util.Date;
import vn.qlkt.personnel.QuanNhan;

public class HoSoNienHan {
    private String id;
    private String quan_nhan_id;
    private QuanNhan quanNhan;
    private TrangThaiHoSo hccsvv_hang_ba_status;
    private Date hccsvv_hang_ba_ngay;
    private TrangThaiHoSo hccsvv_hang_nhi_status;
    private Date hccsvv_hang_nhi_ngay;
    private TrangThaiHoSo hccsvv_hang_nhat_status;
    private Date hccsvv_hang_nhat_ngay;
    private String goi_y;
    private Date createdAt;
    private Date updatedAt;
}
