package vn.qlkt.unit;

import java.util.Date;

public class CoQuanDonVi {
    private String id;
    private String ma_don_vi;
    private String ten_don_vi;
    private Integer so_luong;
    private Date createdAt;
    private Date updatedAt;
}
